--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.0",
+    "@auth/prisma-adapter": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
@@ -38,4 +39,3 @@
     "typescript": "^5.3.3"
   }
 }
-
