--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ascenders?schema=public"
+DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
@@ -7,4 +7,3 @@ NEXTAUTH_SECRET="your-super-secret-key-change-in-production"
 
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-
