--- a/package.json
+++ b/package.json
@@ -13,25 +13,28 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
+    "next-auth": "^4.24.13",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.0",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.5.0",
-    "tsx": "^4.7.0"
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
