--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
