--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # Database - Neon DB
-DATABASE_URL="ta-connection-string-neon-ici"
+DATABASE_URL="psql 'postgresql://neondb_owner:npg_9OeybwEohLd4@ep-proud-shadow-aghdstpt-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
