--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 # Database - Neon DB
-DATABASE_URL="psql 'postgresql://neondb_owner:npg_9OeybwEohLd4@ep-proud-shadow-aghdstpt-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'"
+DATABASE_URL="postgresql://neondb_owner:npg_9OeybwEohLd4@ep-proud-shadow-aghdstpt-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require"
 
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="ton-secret-ici"
+NEXTAUTH_SECRET="pgge5jxm3/+xuFONiR68misXi/b742Yi6bObC/SkmAI="
 
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
