--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts",
+    "db:seed": "dotenv -e .env -- tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.462.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
@@ -35,8 +35,9 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "dotenv-cli": "^7.4.2",
     "postcss": "^8.4.33",
-    "prisma": "^5.9.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
