feat: implement massive site improvements including search, trending, admin reports, social features, and visual enhancements

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-super-secret-key-change-in-production"
 
+# Email (Resend)
+RESEND_API_KEY="re_your_api_key_here"
+FROM_EMAIL="Ascenders <noreply@yourdomain.com>"
+
 # App
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
