--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.6.0",
+    "resend": "^6.6.0",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
