feat: migrate storage to Vercel (Neon Postgres + Vercel Blob)

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
-# Database
-DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require"
+# Database (AWS RDS)
+DATABASE_URL="postgresql://user:password@your-rds-endpoint:5432/database?sslmode=require"
 
 # NextAuth
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-super-secret-key-change-in-production"
+NEXTAUTH_URL="https://ascenders.me"
+NEXTAUTH_SECRET="your-super-secret-key"
 
-# Email (Resend)
-RESEND_API_KEY="re_your_api_key_here"
-FROM_EMAIL="Ascenders <noreply@yourdomain.com>"
+# Email Provider (ses or resend)
+EMAIL_PROVIDER="ses"
+RESEND_API_KEY="re_..."
+FROM_EMAIL="Ascenders <noreply@ascenders.me>"
+
+# AWS Configuration
+AWS_REGION="eu-north-1"
+AWS_ACCESS_KEY_ID="AKIA..."
+AWS_SECRET_ACCESS_KEY="..."
+AWS_S3_BUCKET_NAME="ascenders-uploads"
 
 # App
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL="https://ascenders.me"
