--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/client-ses": "^3.958.0",
+    "@aws-sdk/credential-providers": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
